ServiceMonitor should default to release namespace
Signed-off-by: Dan Sexton <dan.b.sexton@gmail.com>

--- a/install/kubernetes/cilium/charts/agent/templates/servicemonitor.yaml
+++ b/install/kubernetes/cilium/charts/agent/templates/servicemonitor.yaml
@@ -5,6 +5,8 @@ metadata:
   name: cilium-agent
   {{- if .Values.global.prometheus.serviceMonitor.namespace }}
   namespace: {{ .Values.global.prometheus.serviceMonitor.namespace }}
+  {{- else }}
+  namespace: {{ .Release.Namespace }}
   {{- end }}
 spec:
   selector:
