--- a/install/kubernetes/cilium/charts/operator/templates/servicemonitor.yaml
+++ b/install/kubernetes/cilium/charts/operator/templates/servicemonitor.yaml
@@ -5,6 +5,8 @@ metadata:
   name: cilium-operator
   {{- if .Values.global.prometheus.serviceMonitor.namespace }}
   namespace: {{ .Values.global.prometheus.serviceMonitor.namespace }}
+  {{- else }}
+  namespace: {{ .Release.Namespace }}
   {{- end }}
 spec:
   selector:
