--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -1,6 +1,10 @@
 # Include the cilium-agent DaemonSet
 agent:
   enabled: true
+  # Do not run Cilium agent when running with clean mode. Useful to completely
+  # uninstall Cilium as it will stop Cilium from starting and create artifacts
+  # in the node.
+  sleepAfterInit: false
 
 # Include the cilium-config ConfigMap
 config:
