connectivity-check: Add additional test cases
 * Add host to pod via clusterIP
 * Add host to pod via headless service
 * Add pod to pod via headless service

Also use a more optimized base image for all clients which will not run a HTTP
server and thus won't listen to any ports. Doing so complicates running
hostNetworking pods to simulate host traffic.

Signed-off-by: Thomas Graf <thomas@cilium.io>

--- a/examples/kubernetes/connectivity-check/echo-b.yaml
+++ b/examples/kubernetes/connectivity-check/echo-b.yaml
@@ -9,6 +9,18 @@ spec:
   selector:
     name: echo-b
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: echo-b-headless
+spec:
+  type: ClusterIP
+  clusterIP: None
+  ports:
+  - port: 80
+  selector:
+    name: echo-b
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
