--- a/examples/kubernetes/connectivity-check/pod-to-external-fqdn-allow-google.yaml
+++ b/examples/kubernetes/connectivity-check/pod-to-external-fqdn-allow-google.yaml
@@ -1,36 +1,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pod-to-a-fqdn-allow-google-cnp
+  name: pod-to-external-fqdn-allow-google-cnp
 spec:
   selector:
     matchLabels:
-      name: pod-to-a-fqdn-allow-google-cnp
+      name: pod-to-external-fqdn-allow-google-cnp
   replicas: 1
   template:
     metadata:
       labels:
-        name: pod-to-a-fqdn-allow-google-cnp
+        name: pod-to-external-fqdn-allow-google-cnp
     spec:
       containers:
-      - name: pod-to-a-fqdn-allow-google-cnp-container
-        image: docker.io/cilium/json-mock:1.0
+      - name: pod-to-external-fqdn-allow-google-cnp-container
+        image: docker.io/byrnedo/alpine-curl:0.1.8
+        command: ["/bin/ash", "-c", "sleep 1000000000"]
         imagePullPolicy: IfNotPresent
         livenessProbe:
           exec:
-            command: ["bash", "-c", "curl -sS --connect-timeout 5 -o /dev/null www.google.com"]
+            command: ["curl", "-sS", "--connect-timeout", "5", "-o", "/dev/null", "www.google.com"]
         readinessProbe:
           exec:
-            command: ["bash", "-c", "curl -sS --connect-timeout 5 -o /dev/null www.google.com"]
+            command: ["curl", "-sS", "--connect-timeout", "5", "-o", "/dev/null", "www.google.com"]
 ---
 apiVersion: "cilium.io/v2"
 kind: CiliumNetworkPolicy
 metadata:
-  name: "pod-to-a-fqdn-allow-google-cnp"
+  name: "pod-to-external-fqdn-allow-google-cnp"
 spec:
   endpointSelector:
     matchLabels:
-      name: pod-to-a-fqdn-allow-google-cnp
+      name: pod-to-external-fqdn-allow-google-cnp
   egress:
   - toEndpoints:
     - matchLabels:
