--- a/examples/kubernetes/connectivity-check/pod-to-a-denied.yaml
+++ b/examples/kubernetes/connectivity-check/pod-to-a-denied.yaml
@@ -14,14 +14,15 @@ spec:
     spec:
       containers:
       - name: pod-to-a-l3-denied-cnp-container
-        image: docker.io/cilium/json-mock:1.0
+        image: docker.io/byrnedo/alpine-curl:0.1.8
+        command: ["/bin/ash", "-c", "sleep 1000000000"]
         imagePullPolicy: IfNotPresent
         livenessProbe:
           exec:
-            command: ["bash", "-c", "! curl -sS --connect-timeout 5 -o /dev/null echo-a"]
+            command: ["ash", "-c", "! curl -sS --connect-timeout 5 -o /dev/null echo-a"]
         readinessProbe:
           exec:
-            command: ["bash", "-c", "! curl -sS --connect-timeout 5 -o /dev/null echo-a"]
+            command: ["ash", "-c", "! curl -sS --connect-timeout 5 -o /dev/null echo-a"]
 ---
 apiVersion: "cilium.io/v2"
 kind: CiliumNetworkPolicy
