--- a/examples/kubernetes/connectivity-check/pod-to-b-multi-node-clusterip.yaml
+++ b/examples/kubernetes/connectivity-check/pod-to-b-multi-node-clusterip.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pod-to-b-intra-node
+  name: pod-to-b-multi-node-clusterip
 spec:
   selector:
     matchLabels:
-      name: pod-to-b-intra-node
+      name: pod-to-b-multi-node-clusterip
   replicas: 1
   template:
     metadata:
       labels:
-        name: pod-to-b-intra-node
+        name: pod-to-b-multi-node-clusterip
     spec:
       containers:
-      - name: pod-to-b-intra-node-container
+      - name: pod-to-b-multi-node-container
         image: docker.io/byrnedo/alpine-curl:0.1.8
         command: ["/bin/ash", "-c", "sleep 1000000000"]
         imagePullPolicy: IfNotPresent
@@ -21,7 +21,7 @@ spec:
           exec:
             command: ["curl", "-sS", "-o", "/dev/null", "echo-b"]
       affinity:
-        podAffinity:
+        podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
           - labelSelector:
               matchExpressions:
