--- a/examples/kubernetes/connectivity-check/pod-to-external-1111.yaml
+++ b/examples/kubernetes/connectivity-check/pod-to-external-1111.yaml
@@ -14,11 +14,12 @@ spec:
     spec:
       containers:
       - name: pod-to-a-external-1111-container
-        image: docker.io/cilium/json-mock:1.0
+        image: docker.io/byrnedo/alpine-curl:0.1.8
+        command: ["/bin/ash", "-c", "sleep 1000000000"]
         imagePullPolicy: IfNotPresent
         livenessProbe:
           exec:
-            command: ["bash", "-c", "curl -sS --connect-timeout 5 -o /dev/null 1.1.1.1"]
+            command: ["curl", "-sS", "--connect-timeout", "5", "-o", "/dev/null", "1.1.1.1"]
         readinessProbe:
           exec:
-            command: ["bash", "-c", "curl -sS --connect-timeout 5 -o /dev/null 1.1.1.1"]
+            command: ["curl", "-sS", "--connect-timeout", "5", "-o", "/dev/null", "1.1.1.1"]
