[CI] Randomize ns in policy tests
Signed-off-by: Maciej Kwiek <maciej@isovalent.com>

--- a/test/k8sT/manifests/cnp-second-namespaces/templates/policy.yaml
+++ b/test/k8sT/manifests/cnp-second-namespaces/templates/policy.yaml
@@ -10,7 +10,7 @@ spec:
   ingress:
   - fromEndpoints:
     - matchLabels:
-        "k8s:io.kubernetes.pod.namespace": second
+        "k8s:io.kubernetes.pod.namespace": {{ .Values.Namespace }}
     toPorts:
     - ports:
       - port: "80"
