Add priority class to operator deployment
Fixes: #10284
Signed-off-by: Maximilian Bischoff <maximilian.bischoff@inovex.de>

--- a/install/kubernetes/cilium/charts/operator/templates/deployment.yaml
+++ b/install/kubernetes/cilium/charts/operator/templates/deployment.yaml
@@ -127,6 +127,9 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
 {{- end }}
       restartPolicy: Always
+{{- if and (eq .Release.Namespace "kube-system") (or (gt .Capabilities.KubeVersion.Minor "10") (gt .Capabilities.KubeVersion.Major "1"))}}
+      priorityClassName: system-cluster-critical
+{{- end }}
       serviceAccount: cilium-operator
       serviceAccountName: cilium-operator
       volumes:
