--- a/install/kubernetes/cilium/charts/agent/values.yaml
+++ b/install/kubernetes/cilium/charts/agent/values.yaml
@@ -8,3 +8,14 @@ maxUnavailable: 2
 monitor:
   enabled: false
   eventTypes: []
+  # Specifies the resources for the monitor sidecar container if activated
+  resources: {}
+
+# Specifies the resources for the agent container
+resources: {}
+
+# Specifies the resources for the clean-cilium-state init container
+initResources:
+  requests:
+    cpu: "100m"
+    memory: "100Mi"
