Add PodSecurityPolicies to helm chart
Adds PodSecurityPolicies for each the operator and the agent granting
minimal privileges to run them to their respective ServiceAccounts. Also
adds a new value global.psp.enabled for enabling the PSPs which defaults
to false (no PSP is deployed).

Fixes: #9978

Signed-off-by: Maximilian Bischoff <maximilian.bischoff@inovex.de>

--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -291,7 +291,7 @@ global:
     # enabled enables go pprof debugging
     enabled: false
 
-  # logSytemLoad enables logging of system load 
+  # logSytemLoad enables logging of system load
   logSystemLoad: false
 
   # sockops is the BPF socket operations configuration
@@ -342,3 +342,7 @@ global:
   remoteNodeIdentity: true
 
   synchronizeK8sNodes: true
+
+  # psp creates and binds PodSecurityPolicies for the components that require it
+  psp:
+    enabled: false
