--- a/install/kubernetes/cilium/charts/nodeinit/templates/daemonset.yaml
+++ b/install/kubernetes/cilium/charts/nodeinit/templates/daemonset.yaml
@@ -56,6 +56,18 @@ spec:
                       while crictl ps | grep -v "node-init" | grep -q "POD_cilium"; do sleep 1; done
                     fi
 
+{{- if .Values.azure }}
+                    # Azure specific: Transparent bridge mode is required in
+                    # order for proxy-redirection to work
+                    until [ -f /var/run/azure-vnet.json ]; do
+                      echo waiting for azure-vnet to be created
+                      sleep 1s
+                    done
+                    if [ -f /var/run/azure-vnet.json ]; then
+                      sed -i 's/"Mode": "bridge",/"Mode": "transparent",/g' /var/run/azure-vnet.json
+                    fi
+{{- end }}
+
                     systemctl disable sys-fs-bpf.mount || true
                     systemctl stop sys-fs-bpf.mount || true
 
