Makefile: Fix quiet install
When running `make install V=0` for non-verbose install, it would fail
with:

    $ sudo make install-bpf V=0
    rm -rf /var/lib/cilium/bpf/*
    /bin/bash: @install: command not found
    Makefile:192: recipe for target 'install-bpf' failed
    make: *** [install-bpf] Error 127

This is because a recent target added a shell expression that iterates
over a Make variable, and invokes install via the $(INSTALL) variable
which was previously only invoked directly from Make directives.

The fix is to remove the $(QUIET) from the variable declaration and
instead update all install targets to explicitly provide the quiet
parameter.

Signed-off-by: Joe Stringer <joe@cilium.io>

--- a/Makefile.defs
+++ b/Makefile.defs
@@ -19,7 +19,7 @@ ifeq ($(GO),)
 	GO = go
 endif
 
-INSTALL = $(QUIET)install
+INSTALL = install
 
 CGO_DISABLED = CGO_ENABLED=0
 VERSION = $(shell cat $(dir $(lastword $(MAKEFILE_LIST)))/VERSION)
