--- a/proxylib/Makefile
+++ b/proxylib/Makefile
@@ -19,6 +19,6 @@ clean:
 	$(QUIET)$(GO) clean $(GOCLEAN)
 
 install:
-	$(INSTALL) -m 0755 -d $(DESTDIR)$(LIBDIR)
-	$(INSTALL) -m 0755 $(TARGET).$(VERSION_MAJOR) $(DESTDIR)$(LIBDIR)
+	$(QUIET)$(INSTALL) -m 0755 -d $(DESTDIR)$(LIBDIR)
+	$(QUIET)$(INSTALL) -m 0755 $(TARGET).$(VERSION_MAJOR) $(DESTDIR)$(LIBDIR)
 	ln -sf $(TARGET).$(VERSION_MAJOR) $(DESTDIR)$(LIBDIR)/$(TARGET)
