--- a/plugins/cilium-cni/Makefile
+++ b/plugins/cilium-cni/Makefile
@@ -17,7 +17,7 @@ $(TARGET): $(SOURCES)
 	$(QUIET)CGO_ENABLED=0 $(GO) build $(GOBUILD) -o $(TARGET)
 
 install:
-	$(INSTALL) -m 0755 -d $(DESTDIR)$(CNICONFDIR)
-	$(INSTALL) -m 0644 05-cilium-cni.conf $(DESTDIR)$(CNICONFDIR)
-	$(INSTALL) -m 0755 -d $(DESTDIR)$(CNIBINDIR)
-	$(INSTALL) -m 0755 $(TARGET) $(DESTDIR)$(CNIBINDIR)
+	$(QUIET)$(INSTALL) -m 0755 -d $(DESTDIR)$(CNICONFDIR)
+	$(QUIET)$(INSTALL) -m 0644 05-cilium-cni.conf $(DESTDIR)$(CNICONFDIR)
+	$(QUIET)$(INSTALL) -m 0755 -d $(DESTDIR)$(CNIBINDIR)
+	$(QUIET)$(INSTALL) -m 0755 $(TARGET) $(DESTDIR)$(CNIBINDIR)
