--- a/tools/alignchecker/Makefile
+++ b/tools/alignchecker/Makefile
@@ -14,5 +14,5 @@ clean:
 	$(QUIET)$(GO) clean $(GOCLEAN)
 
 install:
-	$(INSTALL) -m 0755 -d $(DESTDIR)$(BINDIR)
-	$(INSTALL) -m 0755 $(TARGET) $(DESTDIR)$(BINDIR)
+	$(QUIET)$(INSTALL) -m 0755 -d $(DESTDIR)$(BINDIR)
+	$(QUIET)$(INSTALL) -m 0755 $(TARGET) $(DESTDIR)$(BINDIR)
