--- a/install/kubernetes/cilium/charts/nodeinit/templates/daemonset.yaml
+++ b/install/kubernetes/cilium/charts/nodeinit/templates/daemonset.yaml
@@ -177,7 +177,7 @@ spec:
               if grep -q 'docker' /etc/crictl.yaml; then
                 # Works for COS, ubuntu
                 for f in `find /var/lib/cni/networks/ -type f ! -name lock ! -name last_reserved_ip.0`; do docker rm -f $(cat $f) || true; done
-              elif [ -n "$(docker ps --format "{{.Image}}" | grep ^[0-9]*\.dkr\.ecr\.[a-z]*-[a-z]*-[0-9]*\.amazonaws\.com/amazon-k8s-cni)" ]; then
+              elif [ -n "$(docker ps --format '{{ "{{" }}.Image{{ "}}" }}' | grep ^[0-9]*\.dkr\.ecr\.[a-z]*-[a-z]*-[0-9]*\.amazonaws\.com/amazon-k8s-cni)" ]; then
                 timeout=1
                 for i in $(seq 1 7); do
                   echo "Checking introspection API"
@@ -190,7 +190,7 @@ spec:
                 for pod in $(curl "localhost:61679/v1/pods" 2> /dev/null | jq -r '. | keys[]'); do
                   container_id=$(echo "$pod" | awk -F_ ' { print $3 } ' | cut -c1-12)
                   echo "Restarting ${container_id}"
-                  docker rm -f "${container_id}" || true
+                  docker kill "${container_id}" || true
                 done
               else
                 # COS-beta (with containerd)
