--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,15 @@ dist: trusty
 sudo: required
 
 go:
- - 1.13.8
+  - 1.13.8
+
+arch:
+  - amd64
+  - arm64
+
+jobs:
+  allow_failures:
+  - arch: arm64
 
 if: branch = master OR type = pull_request
 
@@ -17,6 +25,5 @@ before_install: ./.travis/prepare.sh
 
 before_script:
   - export PATH=/usr/local/clang/bin:$PATH
-  - export GO=/home/travis/.gimme/versions/go1.13.8.linux.amd64/bin/go
 
 script: ./.travis/build.sh
