--- a/install/kubernetes/cilium/charts/agent/templates/daemonset.yaml
+++ b/install/kubernetes/cilium/charts/agent/templates/daemonset.yaml
@@ -117,6 +117,14 @@ spec:
               key: custom-cni-conf
               name: cilium-config
               optional: true
+{{- if gt (len .Values.global.hubble.listenAddresses) 0 }}
+        # Hubble uses this group for its unix domain sockets.
+        - name: HUBBLE_GROUP_NAME
+          value: "cilium"
+        # Default Hubble gRPC endpoint for observe/status commands.
+        - name: HUBBLE_DEFAULT_SOCKET_PATH
+          value: {{ .Values.global.hubble.listenAddresses | first | quote }}
+{{- end }}
 {{- if .Values.global.k8sServiceHost }}
         - name: KUBERNETES_SERVICE_HOST
           value: {{ .Values.global.k8sServiceHost | quote }}
