--- a/install/kubernetes/cilium/charts/config/templates/configmap.yaml
+++ b/install/kubernetes/cilium/charts/config/templates/configmap.yaml
@@ -342,3 +342,27 @@ data:
 {{- else }}
   operator-api-serve-addr: '[::1]:9234'
 {{- end }}
+{{ if gt (len .Values.global.hubble.listenAddresses) 0 }}
+  # A space separated list of addresses for Hubble server to listen to. Currently only unix
+  # domain sockets are supported. Hubble gRPC endpoint will be disabled if this field is not
+  # set.
+  hubble-listen-addresses: {{ .Values.global.hubble.listenAddresses | join " " | quote }}
+{{ if .Values.global.hubble.eventQueueSize }}
+  # Buffer size of the channel for Hubble to receive monitor events.
+  hubble-event-queue-size: {{ .Values.global.hubble.eventQueueSize | quote }}
+{{- end }}
+{{ if .Values.global.hubble.flowBufferSize }}
+  # Size of the buffer to store recent flows.
+  hubble-flow-buffer-size: {{ .Values.global.hubble.flowBufferSize | quote }}
+{{- end }}
+{{ if .Values.global.hubble.metricsServer }}
+  # Address to expose Hubble metrics (e.g. ":7070"). Metrics server will be disabled if this
+  # field is not set.
+  hubble-metrics-server: {{ .Values.global.hubble.metricsServer | quote }}
+
+  # A space separated list of metrics to enable. See [0] for available metrics.
+  #
+  # https://github.com/cilium/hubble/blob/master/Documentation/metrics.md
+  hubble-metrics: {{ .Values.global.hubble.metrics | join " " | quote }}
+  {{- end }}
+{{- end }}
