Omit rendering resources when not supplied
Fixes: #10350

Signed-off-by: Maximilian Bischoff <maximilian.bischoff@inovex.de>

--- a/install/kubernetes/cilium/charts/agent/templates/daemonset.yaml
+++ b/install/kubernetes/cilium/charts/agent/templates/daemonset.yaml
@@ -143,8 +143,10 @@ spec:
               command:
               - /cni-uninstall.sh
 {{- end }}
+{{- if .Values.resources }}
         resources:
           {{- toYaml .Values.resources | trim | nindent 10 }}
+{{- end }}
         name: cilium-agent
 {{- if .Values.global.prometheus.enabled }}
         ports:
@@ -224,8 +226,10 @@ spec:
         volumeMounts:
         - mountPath: /var/run/cilium
           name: cilium-run
+{{- if .Values.monitor.resources }}
         resources:
           {{- toYaml .Values.monitor.resources | trim | nindent 10 }}
+{{- end }}
 {{- end }}
 {{- if .Values.global.etcd.managed }}
       # In managed etcd mode, Cilium must be able to resolve the DNS name of
@@ -290,8 +294,10 @@ spec:
 {{- end }}
         - mountPath: /var/run/cilium
           name: cilium-run
+{{- if .Values.initResources }}
         resources:
           {{- toYaml .Values.initResources | trim | nindent 10 }}
+{{- end }}
       restartPolicy: Always
 {{- if and (eq .Release.Namespace "kube-system") (or (gt .Capabilities.KubeVersion.Minor "10") (gt .Capabilities.KubeVersion.Major "1"))}}
       priorityClassName: system-node-critical
