operator: deprecate api-server-port flag
Also, as being deprecated, we should not open this port on all
interfaces since cilium-operator is running in the host network.

For now we will open on both IPv4 and IPv6 localhost addresses since the
user might run the operator on IPv6-only clusters, or vice-versa, we
don't want the operator to not being able from listening on a port on
the IP version not available on the cluster.

Signed-off-by: André Martins <andre@cilium.io>

--- a/install/kubernetes/cilium/charts/config/templates/configmap.yaml
+++ b/install/kubernetes/cilium/charts/config/templates/configmap.yaml
@@ -325,3 +325,9 @@ data:
   enable-remote-node-identity: {{ .Values.global.remoteNodeIdentity | quote }}
 
   synchronize-k8s-nodes: {{ .Values.global.synchronizeK8sNodes | quote }}
+
+{{- if .Values.global.ipv4.enabled }}
+  operator-api-serve-addr: '127.0.0.1:9234'
+{{- else }}
+  operator-api-serve-addr: '[::1]:9234'
+{{- end }}
