hubble: Change the default event queue size
Use the logic to calculate the default monitor queue size to get the
default event queue size for Hubble instead of hardcoding the default
to be 128.

Ref https://github.com/cilium/hubble/issues/161
Ref https://github.com/cilium/cilium/pull/10358/files/fd9f75ca92a8cd9cc0446b5dea13f4f9894cd90b#r388162620

Signed-off-by: Michi Mutsuzaki <michi@isovalent.com>

--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -376,7 +376,8 @@ global:
     #
     # Hubble is disabled if the list is empty.
     listenAddresses: []
-    # Buffer size of the channel Hubble uses to receive monitor events. Defaults to 128.
+    # Buffer size of the channel Hubble uses to receive monitor events. If this value is not set,
+    # the queue size is set to the default monitor queue size.
     eventQueueSize: ~
     # Number of recent flows for Hubble to cache. Defaults to 4096.
     flowBufferSize: ~
