--- a/install/kubernetes/cilium/charts/config/templates/configmap.yaml
+++ b/install/kubernetes/cilium/charts/config/templates/configmap.yaml
@@ -353,7 +353,8 @@ data:
   # set.
   hubble-listen-addresses: {{ .Values.global.hubble.listenAddresses | join " " | quote }}
 {{ if .Values.global.hubble.eventQueueSize }}
-  # Buffer size of the channel for Hubble to receive monitor events.
+  # Buffer size of the channel for Hubble to receive monitor events. If this field is not set,
+  # the buffer size is set to the default monitor queue size.
   hubble-event-queue-size: {{ .Values.global.hubble.eventQueueSize | quote }}
 {{- end }}
 {{ if .Values.global.hubble.flowBufferSize }}
