helm: re-generate quick-install.yaml after PR #9970
quick-install.yaml wasn't re-generated after commit 5f66385fbb15
("Implement policy audit mode for the daemon") introducing the
policy-audit-node option. Do so now.

Signed-off-by: Tobias Klauser <tklauser@distanz.ch>

--- a/install/kubernetes/quick-install.yaml
+++ b/install/kubernetes/quick-install.yaml
@@ -144,6 +144,7 @@ data:
   enable-remote-node-identity: "true"
 
   synchronize-k8s-nodes: "true"
+  policy-audit-mode: "false"
   operator-api-serve-addr: '127.0.0.1:9234'
 ---
 # Source: cilium/charts/agent/templates/clusterrole.yaml
