helm: allow to configure bpf-nat-global-max using Helm
Set the value to the current value of option.NATMapEntriesGlobalDefault

A successive PR will reduce it for #10056

Signed-off-by: Tobias Klauser <tklauser@distanz.ch>

--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -202,6 +202,9 @@ global:
     # tracking table
     ctAnyMax: 262144
 
+    # natMax is the maximum number of entries for the NAT table
+    natMax: 841429
+
     # montiorAggregation is the level of aggregation for datapath trace events
     monitorAggregation: medium
 
