--- a/examples/kubernetes/connectivity-check/connectivity-check.yaml
+++ b/examples/kubernetes/connectivity-check/connectivity-check.yaml
@@ -218,9 +218,11 @@ spec:
         command: ["/bin/ash", "-c", "sleep 1000000000"]
         imagePullPolicy: IfNotPresent
         livenessProbe:
+          timeoutSeconds: 7
           exec:
             command: ["ash", "-c", "! curl -sS --connect-timeout 5 -o /dev/null echo-a"]
         readinessProbe:
+          timeoutSeconds: 7
           exec:
             command: ["ash", "-c", "! curl -sS --connect-timeout 5 -o /dev/null echo-a"]
 ---
