tests: add HostPort connectivity tests to k8sT service tests
Add connectivity test cases from internal and external.

Signed-off-by: Daniel Borkmann <daniel@iogearbox.net>

--- a/test/k8sT/manifests/demo_ds.yaml
+++ b/test/k8sT/manifests/demo_ds.yaml
@@ -80,6 +80,7 @@ spec:
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
+          hostPort: 8080
         readinessProbe:
           httpGet:
             path: /
@@ -89,6 +90,7 @@ spec:
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 69
+          hostPort: 6969
           protocol: UDP
       terminationGracePeriodSeconds: 0
       nodeSelector:
