add validation checker for installed CNPs in preflight
As Cilium might require to update its CRD validation schema it is
important for the users to make sure all policies installed in their
cluster are valid in the point of view the new CRD validation schema
before performing an upgrade.

Avoiding doing this validation might cause Cilium from updating its
NodeStatus in those invalid Network Policies as well as in the worst
case scenario it might give a false sense of security to the user if
a policy is badly formatted and Cilium is not inforcing that policy
due a bad validation.

Signed-off-by: André Martins <andre@cilium.io>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -32,6 +32,7 @@ api/ @cilium/api
 bpf/ @cilium/bpf
 bugtool/cmd/ @cilium/cli
 cilium/ @cilium/cli
+cilium/cmd/preflight_k8s_valid_cnp.go @cilium/kubernetes
 cilium-health/cmd/ @cilium/cli
 cilium-health/launch/ @cilium/health
 contrib/packaging/deb/ @eloycoto
