CI: Change trigger event for docs workflow, add filter
Signed-off-by: Ilya Dmitrichenko <errordeveloper@gmail.com>

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,6 +1,10 @@
 name: Documentation Updates
 
-on: [push]
+on:
+  push:
+    paths: ["Documentation/**"]
+  pull_request:
+    paths: ["Documentation/**"]
 
 jobs:
     build-html:
