CI: remove path filter in docs workflow
This prevents us from marking this job as blocking in GitHub,
as having an optional jobs a blocking one also makes little
sense.

Signed-off-by: Ilya Dmitrichenko <errordeveloper@gmail.com>

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,10 +1,8 @@
 name: Documentation Updates
 
 on:
-  push:
-    paths: ["Documentation/**"]
-  pull_request:
-    paths: ["Documentation/**"]
+  - push
+  - pull_request
 
 jobs:
     build-html:
