bpf: add -DIPV4_FRAGMENTS to BPF Makefile
Add the options for IPv4 frament tracking support to the Makefile, so
that BPF programs are built (and loaded, depending on the case) with the
added complexity caused by fragment tracking support.

Do not add it to MAX_LB_OPTIONS or MAX_LXC_OPTIONS, as the tests
involving those are currently run by CI on Linux 4.9 only (with no LRU
map support - see #10798).

Signed-off-by: Quentin Monnet <quentin@isovalent.com>

--- a/bpf/Makefile
+++ b/bpf/Makefile
@@ -33,6 +33,7 @@ LB_OPTIONS = \
 	-DSKIP_DEBUG \
 	-DENABLE_IPV4:-DLB_L3 \
 	-DENABLE_IPV4:-DLB_L4 \
+	-DENABLE_IPV4:-DLB_L4:-DIPV4_FRAGMENTS \
 	-DENABLE_IPV4:-DLB_L3:-DLB_L4 \
 	-DENABLE_IPV4:-DENABLE_IPSEC \
 	-DENABLE_IPV6:-DLB_L3 \
@@ -151,6 +152,7 @@ LXC_OPTIONS = \
 	 -DENABLE_IPV4:-DENABLE_IPSEC \
 	 -DENABLE_IPV4:-DHAVE_LPM_TRIE_MAP_TYPE \
 	 -DENABLE_IPV4:-DHAVE_LPM_TRIE_MAP_TYPE:-DHAVE_LRU_HASH_MAP_TYPE \
+	 -DENABLE_IPV4:-DIPV4_FRAGMENTS \
 	 -DENABLE_IPV6 \
 	 -DENABLE_IPV6:-DENABLE_IPSEC \
 	 -DENABLE_IPV6:-DHAVE_LPM_TRIE_MAP_TYPE \
