--- a/install/kubernetes/cilium/charts/agent/templates/daemonset.yaml
+++ b/install/kubernetes/cilium/charts/agent/templates/daemonset.yaml
@@ -117,13 +117,13 @@ spec:
               key: custom-cni-conf
               name: cilium-config
               optional: true
-{{- if gt (len .Values.global.hubble.listenAddresses) 0 }}
+{{- if .Values.global.hubble.enabled }}
         # Hubble uses this group for its unix domain sockets.
         - name: HUBBLE_GROUP_NAME
           value: "cilium"
         # Default Hubble gRPC endpoint for observe/status commands.
         - name: HUBBLE_DEFAULT_SOCKET_PATH
-          value: {{ .Values.global.hubble.listenAddresses | first | quote }}
+          value: unix://{{ .Values.global.hubble.socketPath }}
 {{- end }}
 {{- if .Values.global.k8sServiceHost }}
         - name: KUBERNETES_SERVICE_HOST
