--- a/install/kubernetes/cilium/charts/config/templates/configmap.yaml
+++ b/install/kubernetes/cilium/charts/config/templates/configmap.yaml
@@ -361,10 +361,11 @@ data:
 {{- else }}
   operator-api-serve-addr: '[::1]:9234'
 {{- end }}
-{{ if gt (len .Values.global.hubble.listenAddresses) 0 }}
-  # A space separated list of addresses for Hubble server to listen to. Currently only unix
-  # domain sockets are supported. Hubble gRPC endpoint will be disabled if this field is not
-  # set.
+{{ if .Values.global.hubble.enabled }}
+  enable-hubble: "true"
+  # UNIX domain socket for Hubble server to listen to.
+  hubble-socket-path:  {{ .Values.global.hubble.socketPath | quote }}
+  # A space separated list of additional addresses for Hubble server to listen to.
   hubble-listen-addresses: {{ .Values.global.hubble.listenAddresses | join " " | quote }}
 {{ if .Values.global.hubble.eventQueueSize }}
   # Buffer size of the channel for Hubble to receive monitor events. If this field is not set,
@@ -384,8 +385,8 @@ data:
   #
   # https://github.com/cilium/hubble/blob/master/Documentation/metrics.md
   hubble-metrics: {{ .Values.global.hubble.metrics | join " " | quote }}
-  {{- end }}
+{{- end }}
+{{- end }}
 
   # A space separated list of iptables chains to disable when installing feeder rules.
   disable-iptables-feeder-rules: {{ .Values.global.disableIptablesFeederRules | join " " | quote }}
-{{- end }}
