kubernetes/connectivity-check: Whitelist OpenShift DNS
OpenShift DNS is using non-standard labels and non-standard namespace.

Signed-off-by: Thomas Graf <thomas@cilium.io>

--- a/examples/kubernetes/connectivity-check/pod-to-external-fqdn-allow-google.yaml
+++ b/examples/kubernetes/connectivity-check/pod-to-external-fqdn-allow-google.yaml
@@ -44,5 +44,16 @@ spec:
       rules:
         dns:
         - matchPattern: "*"
+  - toEndpoints:
+    - matchLabels:
+        k8s:io.kubernetes.pod.namespace: openshift-dns
+        k8s:dns.operator.openshift.io/daemonset-dns: default
+    toPorts:
+    - ports:
+      - port: "5353"
+        protocol: UDP
+      rules:
+        dns:
+        - matchPattern: "*"
   - toFQDNs:
     - matchPattern: "*.google.com"
