--- a/examples/kubernetes/connectivity-check/pod-to-a-denied.yaml
+++ b/examples/kubernetes/connectivity-check/pod-to-a-denied.yaml
@@ -43,3 +43,11 @@ spec:
     - ports:
       - port: "53"
         protocol: UDP
+  - toEndpoints:
+    - matchLabels:
+        k8s:io.kubernetes.pod.namespace: openshift-dns
+        k8s:dns.operator.openshift.io/daemonset-dns: default
+    toPorts:
+    - ports:
+      - port: "5353"
+        protocol: UDP
